2000-02-07  Damon Chaplin  <damon@helixcode.com>

	* widgets/shortcut-bar/e-group-bar.c (e_group_bar_draw): finished.

	* widgets/shortcut-bar/e-icon-bar.c (e_icon_bar_item_released): 
	check that an item was pressed.

2000-02-03  bertrand  <Bertrand.Guiheneuf@aful.org>

	* camel/camel-formatter.c (find_preferred_displayable_body_part_in_multipart_alternative): 
	(mime_part_to_html): typo fix : 
	use find_preferred_displayable_body_part_in_multipart_alternative
	instead of the other names. Allows camel to have no undefined symbols. 

2000-02-02  Matt Loper  <matt.loper@splashtech.com>

	* tests/test-formatter.c: New file; intended to test the
	CamelFormatter class.

	* camel/camel-formatter.c: Lots of cleanup, commenting, some new
	functions, and a really basic skeleton for getting bonobo objects
	into the html.
	(encode_entities): New function, stolen from Daniel Velliard.

2000-01-28  Christopher James Lahey  <clahey@helixcode.com>

	* addressbook/printing/e-contact-print-style-editor.h,
	addressbook/printing/e-contact-print-style-editor.c,
	addressbook/printing/test-contact-print-style-editor.c: Files to
	load the contact print style editor from the glade file.  Doesn't
	really do anything yet.

	* addressbook/printing/Makefile.am: Added style editor stuff.

	* addressbook/printing/e-contact-print.glade: Changed a bit.
	Fixed an out of place widget.

	* addressbook/printing/.cvsignore: Added
	contact-print-style-editor-test.

	* addressbook/printing/smallbook.ecps: Fixed up the values to
	match the new types.

	* addressbook/printing/medbook.ecps,
	addressbook/printing/phonelist.ecps: Added two new printing
	styles.

	* addressbook/printing/e-contact-print.h: Fixed an incorrect
	comment.
	
	* addressbook/printing/e-contact-print.c: Added columns and letter
	tabs.  Tweaked spacing all over the place.  Fixed card height
	function so that column wrapping is always done correctly.  Added
	pulling of style information from a file.  Added line wrapping